logs/Slang/generated/keywords/5.6.2--keyword_case.sv.log
name: case
description: The 'case' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:8: error: expected declarator
    bit case;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:9: error: case generate has no items
    bit case;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:13: error: expected expression
    bit case;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:13: error: expected '('
    bit case;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:13: error: expected ')'
    bit case;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_case.sv:8:13: error: expected 'endcase'
    bit case;
            ^
